# python-chatbot

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  audio_io.py  chatbot.py  config.json  config.py  install.bat  llm.py  pixi.toml  platform_setup.py  pyproject.toml  pyrightconfig.json  requirements-test.txt  requirements.txt  ros_app.py  setup.py  setup_models.py  stt.py  tts_engine.py  ui_common.py  vad.py
.claude/: settings.local.json
.github/workflows/: test.yml  tests.yml
docs/: ARCHITECTURE.md  ROS2.md
launch/: voice_chatbot.launch.py
tests/: conftest.py  test_app.py  test_audio_io.py  test_chatbot.py  test_config.py  test_llm.py  test_platform_setup.py  test_setup_models.py  test_stt.py  test_tts_engine.py  test_vad.py
tools/: ensure_setuptools_compat.py  install_python_linux.sh  install_python_windows.bat  ros_build_humble.sh  ros_env_humble.sh  ros_launch_humble.sh  ros_launch_pixi.bat  ros_launch_pixi.sh  ros_run_humble.sh  ros_run_pixi.bat  ros_run_pixi.sh
voice_chatbot/: __init__.py  app.py  audio_io.py  chatbot.py  config.py  errors.py  llm.py  platform_setup.py  setup_models.py  stt.py  tts_engine.py  ui_common.py
voice_chatbot_ros/: llm_node.py  node.py  stt_node.py  tts_node.py
