[build-system]
requires = ["setuptools>=69.5"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-chatbot"
version = "0.1.0"
description = "Local speech-to-speech voice assistant with PySide6 GUI, CLI, and ROS 2 integration."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "Aapo Pihlajaniemi", email = "aapoto1201@gmail.com" },
]
keywords = ["voice-assistant", "chatbot", "speech-to-text", "text-to-speech", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "sounddevice",
    "huggingface-hub",
]

[project.optional-dependencies]
stt = [
    "faster-whisper",
]
llm = [
    "llama-cpp-python",
]
tts = [
    "coqui-tts[codec]",
]
vad = [
    "silero-vad",
]
gui = [
    "PySide6>=6.7,<7",
]
all = [
    "voice-chatbot[stt,llm,tts,vad,gui]",
]
dev = [
    "voice-chatbot[all]",
    "pytest>=9,<10",
    "pytest-cov>=5,<8",
]

[project.scripts]
voice-chatbot = "voice_chatbot.chatbot:main"
voice-chatbot-app = "voice_chatbot.app:main"
voice-chatbot-setup-models = "voice_chatbot.setup_models:main"

[project.urls]
Homepage = "https://github.com/Aapo2001/python-chatbot"
Documentation = "https://docs-site-kappa-coral.vercel.app"
Repository = "https://github.com/Aapo2001/python-chatbot"
Issues = "https://github.com/Aapo2001/python-chatbot/issues"

[tool.setuptools.packages.find]
include = ["voice_chatbot", "voice_chatbot.*"]
exclude = ["voice_chatbot_ros", "voice_chatbot_ros.*", "tests", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
